# CashMe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  VERSION  main.cpp  submodules.init.txt
.github/workflows/: Linux.yml  Osx.yml  Win.yml
apis/: CashMePluginApi.h  ILayoutPane.h
cmake/Maintained/: ezlibs.cmake  imguipack.cmake  maintained.cmake
cmake/NotMaintained/: glad.cmake  glfw.cmake  notmaintained.cmake  sha1.cmake  sqlite3.cmake
plugins/LCLBroker/: CMakeLists.txt  README.md
plugins/LCLBroker/cmake/: xpdf.cmake
plugins/LCLBroker/src/: LCLBroker.cpp  LCLBroker.h
plugins/LCLBroker/src/Abstract/: Base.cpp  Base.h
plugins/LCLBroker/src/Headers/: LCLBrokerBuild.h
plugins/LCLBroker/src/Modules/: OfcAccountStatementModule.cpp  OfcAccountStatementModule.h  PdfAccountStatementModule.cpp  PdfAccountStatementModule.h
plugins/LCLBroker/src/Utils/: Utils.cpp  Utils.h
plugins/LCLBroker/tests/: CMakeLists.txt  main.cpp
plugins/LCLBroker/tests/src/: Test_Module.cpp  Test_Module.h
res/: appicon.rc
src/: App.cpp  App.h
src/Backend/: MainBackend.cpp  MainBackend.h
src/Frontend/: ImGuiThemes.cpp  MainFrontend.cpp  MainFrontend.h
src/Frontend/Dialogs/: ADataDialog.hpp  AccountDialog.cpp  AccountDialog.h  BankDialog.cpp  BankDialog.h  CategoryDialog.cpp  CategoryDialog.h  EntityDialog.cpp  EntityDialog.h  IncomeDialog.cpp  IncomeDialog.h  OperationDialog.cpp  OperationDialog.h  RuleDialog.cpp  RuleDialog.h  RuleSuggestionsDialog.cpp  RuleSuggestionsDialog.h  TransactionDialog.cpp  TransactionDialog.h
src/Frontend/Dialogs/abstract/: ADataDialog.cpp  ADataDialog.h  ADataDialog.hpp
src/Frontend/Graph/: BudgetGraph.cpp  BudgetGraph.h  BuySellBarsGraph.cpp  BuySellBarsGraph.h  BuySellPieGraph.cpp  BuySellPieGraph.h  RainbowColormap.h
src/Frontend/Tables/: AccountsTable.cpp  AccountsTable.h  BanksTable.cpp  BanksTable.h  BudgetTable.cpp  BudgetTable.h  BuySellTable.cpp  BuySellTable.h  CategoriesTable.cpp  CategoriesTable.h  EntitiesTable.cpp  EntitiesTable.h  IncomesTable.cpp  IncomesTable.h  OperationsTable.cpp  OperationsTable.h  RulesTable.cpp  RulesTable.h  TransactionsTable.cpp  TransactionsTable.h
src/Frontend/Tables/abstract/: ADataBarsTable.cpp  ADataBarsTable.h  ADataTable.cpp  ADataTable.h
src/Headers/: CashMeBuild.h  CustomImGuiFileDialogConfig.h  CustomImWidgetsConfig.h  CustomInAppGpuProfiler.h  CustomStrockerBackendConfig.h  DatasDef.h
src/Helpers/: TranslationHelper.cpp  TranslationHelper.h
src/Models/: BudgetComputer.cpp  BudgetComputer.h  DataBase.cpp  DataBase.h  DataBase_Banks.cpp  DataBase_Budget.cpp  DataBase_Categories.cpp  DataBase_Entities.cpp  DataBase_Incomes.cpp  DataBase_Operations.cpp  DataBase_Rules.cpp  DataBase_Sources.cpp  DataBase_Stats.cpp  DataBase_Transactions.cpp  DataBrokers.cpp  DataBrokers.h  Database_Accounts.cpp
src/Panes/: AccountPane.cpp  AccountPane.h  AccountsPane.cpp  AccountsPane.h  BanksPane.cpp  BanksPane.h  BudgetPane.cpp  BudgetPane.h  BuySellPane.cpp  BuySellPane.h  CategoriesPane.cpp  CategoriesPane.h  ConsolePane.cpp  ConsolePane.h  DebitCreditPane.cpp  DebitCreditPane.h  EntitiesPane.cpp  EntitiesPane.h  IncomesPane.cpp  IncomesPane.h  OperationsPane.cpp  OperationsPane.h  RulesPane.cpp  RulesPane.h  StatementsPane.cpp  StatementsPane.h  StatsPane.cpp  StatsPane.h  TransactionsPane.cpp  TransactionsPane.h
src/Plugins/: PluginManager.cpp  PluginManager.h
src/Project/: ProjectFile.cpp  ProjectFile.h
src/Res/: fontIcons.cpp  fontIcons.h
src/Res/fonts/: CASH.ifs
src/Systems/: CategorizationEngine.cpp  CategorizationEngine.h  SettingsDialog.cpp  SettingsDialog.h
src/Threads/: ImportWorkerThread.cpp  ImportWorkerThread.h
tests/: CMakeLists.txt  main.cpp
tests/src/: Test_CashMe.cpp  Test_CashMe.h  Test_Database.cpp  Test_Database.h
